backend/kubernetes/microservicegd-k8s/microservicegd-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservicegd
  namespace: sn-ugb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservicegd
      version: "v1"
  template:
    metadata:
      labels:
        app: microservicegd
        version: "v1"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - microservicegd
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: microservicegd-app
          image: eUGB/microservicegd
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 8089
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: http
            initialDelaySeconds: 120
