backend/kubernetes/microservicegd-k8s/microservicegd-elasticsearch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservicegd-elasticsearch
  namespace: sn-ugb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservicegd-elasticsearch
  template:
    metadata:
      labels:
        app: microservicegd-elasticsearch
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: microservicegd-elasticsearch-pvc
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:8.10.4
          ports:
            - containerPort: 9200
              name: http
              protocol: TCP
            - containerPort: 9300
              name: transport
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /usr/share/elasticsearch/data/
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: microservicegd-elasticsearch
  namespace: sn-ugb
spec:
  selector:
    app: microservicegd-elasticsearch
  ports:
    - port: 9200
      name: http
      protocol: TCP
    - port: 9300
      name: transport
      protocol: TCP
