backend/kubernetes/microservicegd-k8s/microservicegd-postgresql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservicegd-postgresql
  namespace: sn-ugb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservicegd-postgresql
  template:
    metadata:
      labels:
        app: microservicegd-postgresql
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: microservicegd-postgresql-pvc
      containers:
        - name: postgres
          image: postgres:16.1
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: microservicegd-postgresql
  namespace: sn-ugb
spec:
  selector:
    app: microservicegd-postgresql
  ports:
    - port: 5432
