backend/kubernetes/microservicegd-k8s/microservicegd-virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: microservicegd-virtualservice
  namespace: sn-ugb
spec:
  hosts:
    - microservicegd
  http:
    - route:
        - destination:
            host: microservicegd
            subset: "v1"
          weight: 100
      retries:
        attempts: 3
        perTryTimeout: 2s
